--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   material_color_utilities: ^0.11.1
+  mesh: ^0.4.1
   responsive_framework: ^1.1.0
   url_launcher: ^6.1.11
 
